[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "zeroclaw"
version         = "1.0.0"
description     = "Run OpenClaw with zero API cost — AirLLM local inference bridge"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["openclaw", "airllm", "local-llm", "ai-agent", "zero-cost"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "airllm>=0.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]

[project.scripts]
zeroclaw = "zeroclaw.cli:main"

[project.urls]
Homepage      = "https://github.com/yourusername/zeroclaw"
Documentation = "https://github.com/yourusername/zeroclaw#readme"
Issues        = "https://github.com/yourusername/zeroclaw/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zeroclaw*"]
