[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "zeroclaw"
version         = "1.0.0"
description     = "Run OpenClaw with zero API cost — AirLLM local inference bridge"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["openclaw", "airllm", "local-llm", "ai-agent", "zero-cost"]

dependencies = [
    "airllm>=2.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
]

[project.scripts]
zeroclaw = "zeroclaw.cli:main"

[project.urls]
Homepage = "https://github.com/nickzsche21/ZeroCLAW"

[tool.setuptools.packages.find]
where   = ["."]
include = ["zeroclaw*"]
